--- a/sublimetext3.desktop
+++ b/sublimetext3.desktop
@@ -1,7 +1,7 @@
-#!/usr/bin/env xdg-open
 [Desktop Entry]
-Name=Sublime Text 3
 Comment=Editor de código
-Icon=/home/xxx/sublime_text_3/Icon/256x256/sublime-text.png
 Exec=/home/xxx/sublime_text_3/sublime_text
+Icon=/home/xxx/sublime_text_3/Icon/256x256/sublime-text.png
+Name[pt_BR]=Sublime Text  3
+Name=Sublime Text 3
 Type=Application
