--- a/atom.desktop
+++ b/atom.desktop
@@ -2,6 +2,6 @@
 [Desktop Entry]
 Comment=Editor de código
 Exec=atom
-Icon=/home/xxx/Copy/Apps/atom/resources/atom.png
+Icon=/home/xxx/Copy/Apps/atom-0.101.0/resources/atom-2.png
 Name=Atom Editor
 Type=Application
