--- a/atom.desktop
+++ b/atom.desktop
@@ -1,7 +1,7 @@
 #!/usr/bin/env xdg-open
 [Desktop Entry]
 Comment=Editor de código
-Exec=atom
-Icon=/home/xxx/Copy/Apps/atom-0.101.0/resources/atom-2.png
+Exec=/tmp/atom-build/Atom/atom
+Icon=/home/xxx/Copy/Apps/atom_1024x1024x32.png
 Name=Atom Editor
 Type=Application
